--- a/src/components/Dish/Dish.css
+++ b/src/components/Dish/Dish.css
@@ -3,3 +3,15 @@
   height: auto;
   border-radius: 1em;
 }
+
+@media screen and (max-width: 770px) {
+  .Dish img {
+    max-width: 100px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .Dish .buttons {
+    margin: 0 auto;
+  }
+}
